2009-01-13 TualatriX <tualatrix@gmail.com>

	* pulog/feed.py: Use the date__lte=datetime.datetime.now()

2009-01-11 TualatriX <tualatrix@gmail.com>

	* demo-site/static/img/favicon.ico, pulog/templates/base.html: Added
	the favicon.

2009-01-10 TualatriX <tualatrix@gmail.com>

	* pulog/templates/post/title.html
	pulog/templates/comment/comment.html: Use comment_count instead of
	get_comment_count.
	* pulog/views/post.py, urls.py: Added the view of tag.
	* pulog/templatetags/sidebar.py: Changed the latest items from 10 to 20.  

2009-01-09 TualatriX <tualatrix@gmail.com>

	* pulog/feed.py: Set the latest feed item to 10.
	* pulog/urls.py, views/utils.py: Set the Redirect from /feed/ /rss to
	/feed/latest/.
	* pulog/urls.py, templates/robots.txt, views/utils.py: Added the view of
	robots.txt

2009-01-08 TualatriX <tualatrix@gmail.com>

	* pulog/models.py, signals.py: Added the comment_count and related
	signal to Post model.
	* pulog/templates/post/title.html, comment/comment.html: Show comment
	count.

2009-01-03 TualatriX <tualatrix@gmail.com>

	* pulog/urls.py: Added the sitemap.

2009-01-02 TualatriX <tualatrix@gmail.com>

	* pulog/templates/base.html: Fixed the div error of sidebar and
	contain.

2009-01-01 TualatriX <tualatrix@gmail.com>

	* pulog/utils.py, pulog/models.py: Merged the tagging.

2008-12-31 TualatriX <tualatrix@gmail.com>

	* pulog/templates/base.html, pulog/views/post.py: Improved the
	paginator.
	* pulog/templatetags/sidebar.py: Imporved the archive_list tag.

2008-12-30 TualatriX <tualatrix@gmail.com>

	* pulog/urls.py: Fixed the page slug issus.
	* pulog/models.py: Changed the status and type back to CharField.
	* pulog/models.py: Added the is_public field to link.
	* pulog/views/post.py: Fixed the search function, only search the
	published post.

2008-11-07 TualatriX <tualatrix@gmail.com>
	
	* pulog/models.py: Added the get_admin_url method for post. 
	* pulog/views.py: Changed the view of single-post.
