@@ -1,0 +1,24 @@
+{% extends "base.html" %}
+{% load i18n %}
+
+{% block title %} I'm TualatriX {% endblock %}
+
+{% block content %}
+	{% if favourites %}
+		{% for favourite in favourites %}
+		<div class="favourite" id="favourite-{{ favourite.id }}">
+			<h2><a href="{{ favourite.get_absolute_url }}" rel="bookmark" title="Permanent Link to {{ favourite.title }}">{{ favourite.title }}</a></h2>
+
+		
+		<div class="clear"></div>
+		<div class="entry">
+			{% autoescape off %}
+			{{ favourite.content }}
+			{% endautoescape %}
+		</div>
+		</div>
+		{% endfor %}
+	{% else %}
+		No artile yet!
+	{% endif %}
+{% endblock %}
