@@ -1,0 +1,5 @@
+{% load filter i18n count %}
+
+<ul class="title">	
+	<li class="topic"><a href="{{ favourite.get_absolute_url }}" rel="bookmark" title="Permanent Link to {{ favourite.title }}">{{ favourite.title }}</a></li>
+</ul>
