@@ -2,12 +2,17 @@
 <div id="sidebar">
 	<ul>
 		<li>
-		<h2>{% trans "Recent" %}</h2>
+		<h2>{% trans "Recent Favourites" %}</h2>
+		{% get_recent_favourites %}
+		</li>
+
+		<li>
+		<h2>{% trans "Recent Posts" %}</h2>
 		{% get_recent_posts %}
 		</li>
 
 		<li>
-		<h2>{% trans "Comments" %}</h2>
+		<h2>{% trans "Recent Comments" %}</h2>
 		{% get_recent_comments %}
 		</li>
 
