@@ -1,7 +1,0 @@
-{% if posts %}
-<ul>
-	{% for post in posts %}
-	<li><a href="/post/{{ post.id}}">{{ post.title }}</a></li>
-	{% endfor %}
-</ul>
-{% endif %}
